app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 0, 0, 0;
  --header-background-rgb: 0, 0, 0;
  --footer-background-rgb: 0, 0, 0;
  
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

header.exchvnge_header {
  background-color: var(--header-background-rgb);
  color: #fff;
  font-size: 14px;
  font-weight:bold; 
  display:block;
  text-align:center;
  position: fixed;
  width:100%;
  height: 75px;
  display:block;
  top:0;
  z-index:100;
  padding-top:15px;
  padding-bottom: 15px;
}

header.exchvnge_header img{
  text-align:center;
  margin:10px auto;
  display:block;
  width: 150px;
  
}

footer.exchvnge_footer {
  background-color: var(--footer-background-rgb);
  color: #fff;
  text-align:center;
  width: 100%;
  height: 70px;
  font-size:11px;
  position: fixed;
  bottom:0;
  z-index:100;
}

footer.exchvnge_footer img{
  text-align:center;
  margin: 10px auto;
  display:inline-block;
  width: 80px;
  height:30px;
}

main{
  display:block;
 
}

#events-view{
  padding-top:70px;
  z-index:5;
}

#live-view{
  z-index:5;

 padding-top:70px;
 
}

.event-item {
  width: 80%;
  height: 30vh;
  min-width: 250px;
  min-height: 250px;
  max-width: 800px;
  max-height: 800px;
  margin: 0 auto;

}

.event-item .event-description {
   padding: 10px 15px;
   background-color:#fff;
   color: #333;
}

.event-item .event-description h2{ 
  font-size: 1.2rem;
  font-weight: bold;
}

.event-item .event-description p {
  font-size: 0.9rem;
  font-weight: normal;
}

.event-item .event-image {
  display:block;
  position:relative;
}

.event-item .event-image img{
  display:block;
}

.event-item .event-image .event-host{
  position: absolute;
  bottom: 10px;
  right: 10px;
  z-index:10;
  background-color: #000;
  padding:8px 15px;
  border-radius: 50px;
}

.event-item .event-image .event-host .host-avatar {
  display:inline-block;
  margin-right: 8px;
 line-height: 30px;
}

.event-item .event-image .event-host h3 {
  display:inline-block;
  line-height: 30px;
  font-size:0.9rem;
  vertical-align: top;
}



#live-view h1{
  margin:0 auto;
  font-size: 1.2rem;
  margin: 80px auto 0 auto;
  text-align:center;

}

#chat-log{
    height: 30vh;
    overflow-y: scroll;
    position:relative;
    bottom: 60px;
    width:100%;
    z-index: 20;
}

#chat-log .chat{
  margin-bottom:3px;
  padding: 5px 15px;
  text-shadow: 1px 1px #666;
}

#chat-log .pinned-chat{
  background-color:#dedede;
  border-radius: 30px;
  padding: 5px 15px;
  margin-bottom:3px;
  text-shadow: 1px 1px #666;
}

#chat-log .chat-avatar{
  width: 25px !important;
  min-width: 25px !important;
}

#chat-log .sender{
  margin-right: 10px;
  font-weight: bold;
  font-size: 0.8em;
}

#chat-log .message{
  font-size: 0.8em;
  font-weight: normal;
}

.pinned-chat .sender, .pinned-chat .message{
  color:#333;
}

